리뷰 구매내역 구현, 수정 수정중

--- a/semiproject/src/main/resources/static/css/review.css
+++ b/semiproject/src/main/resources/static/css/review.css
@@ -48,3 +48,12 @@
         	font-size:0.7em;
         	color: gray;
         }
+        .review-item .changeText .text{
+        	font-size: 12px;
+        	color: gray;
+        	cursor: pointer;
+        }
+         .review-item .changeText .text:hover{
+        	color: #776BFF;
+        	cursor: pointer;
+        }
