--- a/semiproject/src/main/resources/static/css/layout.css
+++ b/semiproject/src/main/resources/static/css/layout.css
@@ -15,7 +15,7 @@ header {
     padding-top: 10px;
     padding-bottom: 10px;
     height: 95px;
-    z-index: 2;
+    z-index: 99999;
 }
 
 footer{
@@ -36,12 +36,14 @@ footer{
 
 aside {
     position: fixed;
-    top: 95.5px;
+    top: 0;
     left: 0;
-    bottom: 0;
+    /*bottom: 0;*/
     width: 100%;
+    height: 100%;
     z-index: 9999;
     background-color: #ffffff;
+    padding-top: 95px;
 }
 
 #wrapper{
