--- a/semiproject/src/main/resources/static/css/layout.css
+++ b/semiproject/src/main/resources/static/css/layout.css
@@ -14,6 +14,7 @@ header {
     top: 0;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-bottom: 40px;
     height: 95px;
     z-index: 99999;
 }
@@ -22,12 +23,8 @@ footer{
     height: 200px;
     position : relative;
     background-color: #f8f8ff;
-    padding-top: 10px;
-    /* bottom: 0;
-    padding-bottom: 10px;
-    width: 100%;
-    transform: translatY(-100%); */
     margin: 0;
+    margin-top: 40px;
     padding: 0;
     border: 0;
     font-family: inherit;
