디자인수정중 / 팝업창 기능 진짜완성함 /

--- a/semiproject/src/main/resources/static/css/layout.css
+++ b/semiproject/src/main/resources/static/css/layout.css
@@ -55,7 +55,9 @@ aside {
 */
 .flex {
     display: flex;
-    align-items: center;
+    
+
+    justify-content: space-between;
 }
 .flex.center {
     justify-content: center;
