--- a/semiproject/src/main/resources/static/css/commons.css
+++ b/semiproject/src/main/resources/static/css/commons.css
@@ -487,6 +487,78 @@ a.form-btn.neutral {
 }
 
 /*
+	파일 인풋
+	<div class="row container-500">
+        <div class="filebox bs3-primary">
+            <input class="upload-name" value="파일선택" disabled="disabled">
+            <label for="ex_filename">업로드</label> 
+          <input type="file" id="ex_filename" class="upload-hidden"> 
+        </div>
+    </div>
+*/
+.where {
+    display: block;
+    margin: 25px 15px;
+    font-size: 11px;
+    color: #000;
+    text-decoration: none;
+    font-family: verdana;
+    font-style: italic;
+}
+.filebox input[type="file"] {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip:rect(0,0,0,0);
+    border: 0;
+}
+.filebox label {
+    display: inline-block;
+    padding: .5em .75em;
+    color: #999;
+    font-size: inherit;
+    line-height: normal;
+    vertical-align: middle;
+    background-color: #fdfdfd;
+    cursor: pointer;
+    border: 1px solid #ebebeb;
+    border-bottom-color: #e2e2e2;
+    border-radius: .25em;
+}
+/* named upload */
+.filebox .upload-name {
+    display: inline-block;
+    padding-left: 1.3em;
+    padding-right: 1.3em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    font-size: 15px;
+    line-height: normal;
+    vertical-align: middle;
+    background-color: none;
+    border: 2px solid #776bff;
+    border-radius: 100px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.filebox.bs3-primary label {
+    color: white;
+    background-color: #776bff;
+    border: 2px solid #776bff;
+    font-size: 15px;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-radius: 100px;
+    padding-left: 4.9em;
+    padding-right: 4.9em;
+    height: 51px;
+}
+
+/*
     체크박스 디자인
 */
 input[type="checkbox"] {
