--- a/semiproject/src/main/resources/static/css/commons.css
+++ b/semiproject/src/main/resources/static/css/commons.css
@@ -123,6 +123,7 @@
 .w-33 {width: 33.3333%;}
 .w-30 {width: 30%;}
 .w-25 {width: 25%;}
+.w-24 {width: 24%;}
 .w-20 {width: 20%;}
 .w-15 {width: 15%;}
 .w-10 {width: 10%;}
@@ -179,6 +180,7 @@
 
 .ms-10 {margin-left: 10px;}
 .ms-20 {margin-left: 20px;}
+.ms-24 {margin-left: 24px;}
 .ms-30 {margin-left: 30px;}
 .ms-40 {margin-left: 40px;}
 .ms-50 {margin-left: 50px;}
