--- a/semiproject/src/main/resources/static/css/review.css
+++ b/semiproject/src/main/resources/static/css/review.css
@@ -16,6 +16,10 @@
         #chooseFile{
             visibility: hidden;
         }
+        
+      	/*
+      		리뷰 별점
+      	*/
 
         .reviewStar .starR{
             text-decoration: none;
@@ -33,12 +37,33 @@
             color: #776BFF;
         }
         
+        /*
+        	내 리뷰 목록 테이블 
+        */
+        
+        .fa-star{
+        	color: #776BFF;
+        }
+        
+        .reviewContent a{
+        	text-decoration: none;
+        }
+        
+        .reviewTime{
+        	font-size:0.7em;
+        	color: gray;
+        }
+        
+        /*
+        	리뷰창 
+        */
+        
         .review-item{
         	font-size:15px;
         	padding:1em;
         }
         .review-item .memberId{
-        	font-size: 1.25em
+        	font-size: 1.15em
         }
         .review-item .reviewContent{
         	font-size:1em;
@@ -48,7 +73,7 @@
         	font-size:0.7em;
         	color: gray;
         }
-        .review-item .changeText .text{
+         .review-item .changeText .text{
         	font-size: 12px;
         	color: gray;
         	cursor: pointer;
@@ -57,3 +82,13 @@
         	color: #776BFF;
         	cursor: pointer;
         }
+        
+        /*
+        	리뷰 좋아요
+        */
+        
+        .review-item .fa-heart {
+        	color:red;
+        	cursor: pointer;
+        }
+        
