--- a/templates/test.html
+++ b/templates/test.html
@@ -14,10 +14,127 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <title>Document</title>
     <style>
+        .btn-upload {
+            width: 150px;
+            height: 30px;
+            background: #fff;
+            border: 1px solid rgb(77,77,77);
+            border-radius: 10px;
+            font-weight: 500;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        #file {
+            display: none;
+        }
 
+        /*body {margin: 10px}*/
+        .where {
+            display: block;
+            margin: 25px 15px;
+            font-size: 11px;
+            color: #000;
+            text-decoration: none;
+            font-family: verdana;
+            font-style: italic;
+        } 
+        .filebox input[type="file"] {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip:rect(0,0,0,0);
+            border: 0;
+        }
+        .filebox label {
+            display: inline-block;
+            padding: .5em .75em;
+            color: #999;
+            font-size: inherit;
+            line-height: normal;
+            vertical-align: middle;
+            background-color: #fdfdfd;
+            cursor: pointer;
+            border: 1px solid #ebebeb;
+            border-bottom-color: #e2e2e2;
+            border-radius: .25em;
+        }
+        /* named upload */
+        .filebox .upload-name {
+            display: inline-block;
+            padding-left: 1.3em;
+            padding-right: 1.3em;
+            padding-top: 1em;
+            padding-bottom: 1em;
+            font-size: 15px;
+            line-height: normal;
+            vertical-align: middle;
+            background-color: none;
+            border: 2px solid #776bff;
+            border-radius: 100px;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+        }
+        .filebox.bs3-primary label {
+            color: white;
+            background-color: #776bff;
+            border: 2px solid #776bff;
+            font-size: 15px;
+            padding-top: 1em;
+            padding-bottom: 1em;
+            border-radius: 100px;
+            padding-left: 2em;
+            padding-right: 2em;
+            height: 51px;
+        }
     </style>
+    <script>
+        /*$("#file").on('change',function(){
+            var fileName = $("#file").val();
+            $(".upload-name").val(fileName);
+        });*/
+        $(document).ready(function(){
+            var fileTarget = $('.filebox .upload-hidden');
+            fileTarget.on('change', function(){
+                if(window.FileReader){
+                    var filename = $(this)[0].files[0].name;
+                } else {
+                    var filename = $(this).val().split('/').pop().split('\\').pop();
+                }
+                $(this).siblings('.upload-name').val(filename);
+            });
+        }); 
+    </script>
 </head>
 <body test>
+
+    <input type="file">
+    <div class="row container-500">
+        <div class="filebox bs3-primary">
+            <input class="upload-name" value="파일선택" disabled="disabled">
+            <label for="ex_filename">업로드</label> 
+          <input type="file" id="ex_filename" class="upload-hidden"> 
+        </div>
+    </div>
+
+    <div class="row container-500">
+        <label for="file">
+            <div class="btn-upload">파일업로드</div>
+        </label>
+        <input type="file" name="file" id="file">
+    </div>
+    <div class="row container-500">
+        <div class="filebox flex">
+            <input class="upload-name form-input medium" value="첨부파일" placeholder="첨부파일" readonly>
+            <label for="file" class="form-btn positive medium">파일찾기</label> 
+            <input type="file" id="file">
+        </div>
+    </div>
     <div class="container-500">
         <div class="flex w-100">
             <div class="w-50">
