--- a/semiproject/src/main/resources/static/css/commons.css
+++ b/semiproject/src/main/resources/static/css/commons.css
@@ -192,6 +192,7 @@
 .mb-30 {margin-bottom: 30px;}
 .mb-40 {margin-bottom: 40px;}
 .mb-50 {margin-bottom: 50px;}
+.mb-60 {margin-bottom: 60px;}
 .mb-70 {margin-bottom: 70px;}
 .mb-80 {margin-bottom: 80px;}
 .mb-60 {margin-bottom: 60px;}
