--- a/semiproject/src/main/resources/static/css/review.css
+++ b/semiproject/src/main/resources/static/css/review.css
@@ -60,6 +60,7 @@
         .review-item .reviewContent{
         	font-size:1em;
         	min-height:2em;
+        	word-break: break-all;
         }
         .review-item .reviewTime{
         	font-size:0.7em;
